Put CSS back at the end; explicitly set font to inherit

--- a/public/embed-raw.css
+++ b/public/embed-raw.css
@@ -1,5 +1,5 @@
 #applause, #applause div, #applause span.applause-count, #applause span.applause-action {
-    font-family:'Open Sans', 'Helvetica', sans-serif !important;
+    font-family:{FONT_STACK};
     cursor:pointer !important;
 }
 
