--- a/public/embed-raw.css
+++ b/public/embed-raw.css
@@ -10,17 +10,11 @@
     height:75px !important;
     border:4px solid #{COLOR} !important;
 
-    -webkit-transition: color 0.5s ease-out;
-    -moz-transition: color 0.5s ease-out;
-    -ms-transition: color 0.5s ease-out;
-    -o-transition: color 0.5s ease-out;
-    transition: color 0.5s ease-out;
-
-    -webkit-transition: background 0.5s ease-out;
-    -moz-transition: background 0.5s ease-out;
-    -ms-transition: background 0.5s ease-out;
-    -o-transition: background 0.5s ease-out;
-    transition: background 0.5s ease-out;
+    -webkit-transition: color 0.5s ease-out, background 0.5s ease-out;
+    -moz-transition: color 0.5s ease-out, background 0.5s ease-out;
+    -ms-transition: color 0.5s ease-out, background 0.5s ease-out;
+    -o-transition: color 0.5s ease-out, background 0.5s ease-out;
+    transition: color 0.5s ease-out, background 0.5s ease-out;
 
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -38,7 +32,7 @@
 
 #applause.applause-voted {
     background-color:#{COLOR} !important;
-    color:#FFF !important;
+    color:#{INVERSE_COLOR} !important;
 }
 
 #applause span {
