--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,7 @@ textarea {
    ========================================================================== */
 h1 {
   font-size:4rem;
-  margin-bottom:1rem;
+  margin:0;
   color:#025D8C;
 }
 
@@ -69,8 +69,9 @@ h1 {
 body {
     font-family:'Open Sans', 'Helvetica', sans-serif;
     color:#444;
-    max-width:550px;
+    max-width:600px;
     margin:3rem auto;
+    padding:1rem;
     line-height:1.45;
     font-size:1.125rem;
 }
@@ -109,8 +110,8 @@ a:hover {
 
 .applause {
   margin-top:-1.5rem;
-  float:right !important;
-  margin-left:2rem !important;
+  float:right;
+  margin-left:2rem;
 }
 
 .applause h3 {
@@ -128,15 +129,31 @@ h2 {
   margin-bottom:0;
 }
 
-
-
-
 /* ==========================================================================
    Media Queries
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
+@media only screen and (max-width: 30em) {
+  body {
+    margin:1rem auto;
+  }
 
+  .applause, p:first-of-type {
+    float:none;
+  }
+
+  #applause {
+    margin:0 auto !important;
+  }
+  .applause {
+    margin:1rem 0;
+    text-align:center;
+  }
+
+  h1 {
+    font-size:3rem;
+    text-align:center;
+  }
 }
 
 @media print,
